APIs/azure.com/servicefabric/6.0.0.1/java-client/docs/PropertyManagementApi.md
# PropertyManagementApi

All URIs are relative to *http://azure.local:19080*

| Method | HTTP request | Description |
|------------- | ------------- | -------------|
| [**createName**](PropertyManagementApi.md#createName) | **POST** /Names/$/Create | Creates a Service Fabric name. |
| [**deleteName**](PropertyManagementApi.md#deleteName) | **DELETE** /Names/{nameId} | Deletes a Service Fabric name. |
| [**deleteProperty**](PropertyManagementApi.md#deleteProperty) | **DELETE** /Names/{nameId}/$/GetProperty | Deletes the specified Service Fabric property. |
| [**getNameExistsInfo**](PropertyManagementApi.md#getNameExistsInfo) | **GET** /Names/{nameId} | Returns whether the Service Fabric name exists. |
| [**getPropertyInfo**](PropertyManagementApi.md#getPropertyInfo) | **GET** /Names/{nameId}/$/GetProperty | Gets the specified Service Fabric property. |
| [**getPropertyInfoList**](PropertyManagementApi.md#getPropertyInfoList) | **GET** /Names/{nameId}/$/GetProperties | Gets information on all Service Fabric properties under a given name. |
| [**getSubNameInfoList**](PropertyManagementApi.md#getSubNameInfoList) | **GET** /Names/{nameId}/$/GetSubNames | Enumerates all the Service Fabric names under a given name. |
| [**putProperty**](PropertyManagementApi.md#putProperty) | **PUT** /Names/{nameId}/$/GetProperty | Creates or updates a Service Fabric property. |
| [**submitPropertyBatch**](PropertyManagementApi.md#submitPropertyBatch) | **POST** /Names/{nameId}/$/GetProperties/$/SubmitBatch | Submits a property batch. |


<a id="createName"></a>
# **createName**
> createName(apiVersion, nameDescription, timeout)

Creates a Service Fabric name.

Creates the specified Service Fabric name.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    NameDescription nameDescription = new NameDescription(); // NameDescription | Describes the Service Fabric name to be created.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      apiInstance.createName(apiVersion, nameDescription, timeout);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#createName");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameDescription** | [**NameDescription**](NameDescription.md)| Describes the Service Fabric name to be created. | |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

null (empty response body)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **201** | A successful response means that the name has been created. |  -  |
| **0** | The detailed error response. |  -  |

<a id="deleteName"></a>
# **deleteName**
> deleteName(apiVersion, nameId, timeout)

Deletes a Service Fabric name.

Deletes the specified Service Fabric name. A name must be created before it can be deleted. Deleting a name with child properties will fail.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      apiInstance.deleteName(apiVersion, nameId, timeout);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#deleteName");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

null (empty response body)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | A successful response means that the Service Fabric name has been deleted. |  -  |
| **0** | The detailed error response. |  -  |

<a id="deleteProperty"></a>
# **deleteProperty**
> deleteProperty(apiVersion, nameId, propertyName, timeout)

Deletes the specified Service Fabric property.

Deletes the specified Service Fabric property under a given name. A property must be created before it can be deleted.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    String propertyName = "propertyName_example"; // String | Specifies the name of the property to get.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      apiInstance.deleteProperty(apiVersion, nameId, propertyName, timeout);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#deleteProperty");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **propertyName** | **String**| Specifies the name of the property to get. | |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

null (empty response body)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | A successful response means that the property has been deleted. |  -  |
| **0** | The detailed error response. |  -  |

<a id="getNameExistsInfo"></a>
# **getNameExistsInfo**
> getNameExistsInfo(apiVersion, nameId, timeout)

Returns whether the Service Fabric name exists.

Returns whether the specified Service Fabric name exists.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      apiInstance.getNameExistsInfo(apiVersion, nameId, timeout);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#getNameExistsInfo");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

null (empty response body)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | A successful response means that the Service Fabric name exists. |  -  |
| **0** | The detailed error response. |  -  |

<a id="getPropertyInfo"></a>
# **getPropertyInfo**
> PropertyInfo getPropertyInfo(apiVersion, nameId, propertyName, timeout)

Gets the specified Service Fabric property.

Gets the specified Service Fabric property under a given name. This will always return both value and metadata.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    String propertyName = "propertyName_example"; // String | Specifies the name of the property to get.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      PropertyInfo result = apiInstance.getPropertyInfo(apiVersion, nameId, propertyName, timeout);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#getPropertyInfo");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **propertyName** | **String**| Specifies the name of the property to get. | |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

[**PropertyInfo**](PropertyInfo.md)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | Details on the Service Fabric property. |  -  |
| **0** | The detailed error response. |  -  |

<a id="getPropertyInfoList"></a>
# **getPropertyInfoList**
> PagedPropertyInfoList getPropertyInfoList(apiVersion, nameId, includeValues, continuationToken, timeout)

Gets information on all Service Fabric properties under a given name.

Gets information on all Service Fabric properties under a given name.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    Boolean includeValues = false; // Boolean | Allows specifying whether to include the values of the properties returned. True if values should be returned with the metadata; False to return only property metadata.
    String continuationToken = "continuationToken_example"; // String | The continuation token parameter is used to obtain next set of results. A continuation token with a non empty value is included in the response of the API when the results from the system do not fit in a single response. When this value is passed to the next API call, the API returns next set of results. If there are no further results then the continuation token does not contain a value. The value of this parameter should not be URL encoded.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      PagedPropertyInfoList result = apiInstance.getPropertyInfoList(apiVersion, nameId, includeValues, continuationToken, timeout);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#getPropertyInfoList");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **includeValues** | **Boolean**| Allows specifying whether to include the values of the properties returned. True if values should be returned with the metadata; False to return only property metadata. | [optional] [default to false] |
| **continuationToken** | **String**| The continuation token parameter is used to obtain next set of results. A continuation token with a non empty value is included in the response of the API when the results from the system do not fit in a single response. When this value is passed to the next API call, the API returns next set of results. If there are no further results then the continuation token does not contain a value. The value of this parameter should not be URL encoded. | [optional] |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

[**PagedPropertyInfoList**](PagedPropertyInfoList.md)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | A paged list of Service Fabric properties. |  -  |
| **0** | The detailed error response. |  -  |

<a id="getSubNameInfoList"></a>
# **getSubNameInfoList**
> PagedSubNameInfoList getSubNameInfoList(apiVersion, nameId, recursive, continuationToken, timeout)

Enumerates all the Service Fabric names under a given name.

Enumerates all the Service Fabric names under a given name. If the subnames do not fit in a page, one page of results is returned as well as a continuation token which can be used to get the next page. Querying a name that doesn&#39;t exist will fail.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    Boolean recursive = false; // Boolean | Allows specifying that the search performed should be recursive.
    String continuationToken = "continuationToken_example"; // String | The continuation token parameter is used to obtain next set of results. A continuation token with a non empty value is included in the response of the API when the results from the system do not fit in a single response. When this value is passed to the next API call, the API returns next set of results. If there are no further results then the continuation token does not contain a value. The value of this parameter should not be URL encoded.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      PagedSubNameInfoList result = apiInstance.getSubNameInfoList(apiVersion, nameId, recursive, continuationToken, timeout);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#getSubNameInfoList");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **recursive** | **Boolean**| Allows specifying that the search performed should be recursive. | [optional] [default to false] |
| **continuationToken** | **String**| The continuation token parameter is used to obtain next set of results. A continuation token with a non empty value is included in the response of the API when the results from the system do not fit in a single response. When this value is passed to the next API call, the API returns next set of results. If there are no further results then the continuation token does not contain a value. The value of this parameter should not be URL encoded. | [optional] |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

[**PagedSubNameInfoList**](PagedSubNameInfoList.md)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | A paged list of Service Fabric names. |  -  |
| **0** | The detailed error response. |  -  |

<a id="putProperty"></a>
# **putProperty**
> putProperty(apiVersion, nameId, propertyDescription, timeout)

Creates or updates a Service Fabric property.

Creates or updates the specified Service Fabric property under a given name.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    PropertyDescription propertyDescription = new PropertyDescription(); // PropertyDescription | Describes the Service Fabric property to be created.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      apiInstance.putProperty(apiVersion, nameId, propertyDescription, timeout);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#putProperty");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **propertyDescription** | [**PropertyDescription**](PropertyDescription.md)| Describes the Service Fabric property to be created. | |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

null (empty response body)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | A successful response means that the property has been created or updated. |  -  |
| **0** | The detailed error response. |  -  |

<a id="submitPropertyBatch"></a>
# **submitPropertyBatch**
> SuccessfulPropertyBatchInfo submitPropertyBatch(apiVersion, nameId, propertyBatchDescriptionList, timeout)

Submits a property batch.

Submits a batch of property operations. Either all or none of the operations will be committed.

### Example
```java
// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.models.*;
import org.openapitools.client.api.PropertyManagementApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    PropertyManagementApi apiInstance = new PropertyManagementApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    String nameId = "nameId_example"; // String | The Service Fabric name, without the 'fabric:' URI scheme.
    PropertyBatchDescriptionList propertyBatchDescriptionList = new PropertyBatchDescriptionList(); // PropertyBatchDescriptionList | Describes the property batch operations to be submitted.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      SuccessfulPropertyBatchInfo result = apiInstance.submitPropertyBatch(apiVersion, nameId, propertyBatchDescriptionList, timeout);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling PropertyManagementApi#submitPropertyBatch");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}
```

### Parameters

| Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **apiVersion** | **String**| The version of the API. This is a required parameter and it&#39;s value must be \&quot;6.0\&quot;. | [default to 6.0] [enum: 6.0] |
| **nameId** | **String**| The Service Fabric name, without the &#39;fabric:&#39; URI scheme. | |
| **propertyBatchDescriptionList** | [**PropertyBatchDescriptionList**](PropertyBatchDescriptionList.md)| Describes the property batch operations to be submitted. | |
| **timeout** | **Long**| The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds. | [optional] [default to 60] |

### Return type

[**SuccessfulPropertyBatchInfo**](SuccessfulPropertyBatchInfo.md)

### Authorization

No authorization required

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details
| Status code | Description | Response headers |
|-------------|-------------|------------------|
| **200** | A successful response means that the property batch succeeded. |  -  |
| **409** | A 409 response means that one of the property batch operations failed, and contains more information about the failure. None of the operations were commited. |  -  |
| **0** | The detailed error response. |  -  |

